feat(landing): add GitHub button link to homepage Add a GitHub button to the homepage hero section for easy access to the project repository

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -102,6 +102,7 @@
             "newRelease": "New Release",
             "description": "A full-stack framework based on Nuxt3, leveraging Vue3 ecosystem advantages to provide out-of-the-box AI integration, user management, and blog systems.",
             "getStarted": "Get Started",
+            "github": "GitHub",
             "developers": "Developers",
             "components": "Components",
             "satisfaction": "Satisfaction",
