--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -102,6 +102,7 @@
             "newRelease": "全新发布",
             "description": "一站式 Nuxt3 SaaS解决方案。内置身份验证、博客、AI集成和SEO优化，让您的出海应用在24小时内从构想到上线。",
             "getStarted": "开始使用",
+            "github": "GitHub",
             "developers": "开发者",
             "components": "组件",
             "satisfaction": "满意度",
